# Wabawachi

./: README.md  db.sqlite3  jgw_search_popular.py  manage.py  pyproject.toml  requirements.txt
basketlists/: apps.py
common/: models.py
review/: models.py  serializers.py
review/migrations/: 0001_initial.py  0002_remove_review_wine_review_wine_id.py  0003_remove_review_hashtag_delete_hashtag_review_hashtag.py  0004_alter_review_wine_id.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_id.py  0002_remove_user_date_joined_remove_user_first_name_and_more.py
wabawachi/: asgi.py  settings.py  urls.py  wsgi.py
wineceller/: admin.py  apps.py  models.py  urls.py  views.py
wineceller/migrations/: 0001_initial.py  0002_alter_wine_id_alter_wineceller_id.py  0002_remove_wineceller_wine_wineceller_wine_id_and_more.py  0002_wine_alter_wineceller_wine.py  0003_alter_wine_wine_picture.py  0003_alter_wineceller_owner.py  0004_delete_wine.py  0004_rename_country_wine_kr_country_and_more.py  0005_wine_have_tried_wine_is_liked_alter_wine_acidic_and_more.py  0006_alter_wine_food_list_alter_wine_kr_grape_list_and_more.py  0007_alter_wine_acidic_alter_wine_body_and_more.py  0008_alter_wine_food_list_alter_wine_kr_grape_list_and_more.py  0009_remove_wine_created_at_remove_wine_updated_at_and_more.py  0010_alter_wine_food_list_alter_wine_kr_grape_list_and_more.py  0011_alter_wine_food_list_alter_wine_kr_grape_list_and_more.py  0012_alter_wine_food_list_alter_wine_kr_grape_list_and_more.py
winerecommend/: apps.py  recommend.py  trending.py  urls.py  views.py
winesearch/: apps.py  models.py  recommend.py  serializers.py  urls.py  views.py
winesearch/migrations/: 0001_initial.py  0002_alter_winesearch_id.py  0002_delete_wine.py  0003_winesearch_searched_at.py  0004_alter_winesearch_searched_at.py
winesellers/: apps.py
