[tool.poetry]
name = "wabawachi"
version = "0.1.0"
description = ""
authors = ["chriss060 <alicevravo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
djangorestframework = "^3.14.0"
django-birthday = "^0.1.4"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^7.0.0"}
pillow = "^9.3.0"
phonenumbers = "^8.13.0"
django-allauth = "^0.51.0"
django-rest-auth = "^0.9.5"
django-custom-user = "^1.0"
djangorestframework-simplejwt = "^5.2.2"
djangosecretkey = "^0.1.0"
django-rest-authtoken = "^2.1.4"
djangorestframework-jwt = "^1.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
