[tool.poetry]
name = "wabawachi"
version = "0.1.0"
description = ""
authors = ["chriss060 <alicevravo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
djangorestframework-jwt = "^1.11.0"
django-rest-auth = "^0.9.5"
django-rest-authtoken = "^2.1.4"
requests = "^2.28.1"
djangorestframework-api-key = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
